add seed as activator tag

--- a/activator.properties
+++ b/activator.properties
@@ -1,6 +1,6 @@
 name=sphere-hello-api-scala-jvm-sdk
 title=hello commercetools JVM SDK with Scala
 description=A starter application with Scala and commercetools JVM SDK
-tags=scala,commercetools
+tags=scala,commercetools,seed
 authorName=commercetools
 authorTwitter=commercetools
